--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
     </head>
-    <body>
+    <body id="app">
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
