--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="build/styles.css">
+    <link rel="stylesheet" href="build/styles.css" type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="app"></div>
