height and width animation

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
+    <script>
+      window.triggerAnimation = function () {
+        document.querySelector('.circulo').classList.toggle('active');
+        document.querySelector('.difuminado').classList.toggle('active');
+      }
+    </script>
     <div class="container" id="127">
-      <img src="bosque.jpg" alt="" class="imagen">
+      <img src="bosque.jpg" alt="" class="imagen" onclick='triggerAnimation()'>
       <div class="difuminado">
         <div class="circulo">
 
