--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>tururu</title>
     <link rel="stylesheet" href="index.css">
-    <!-- <link rel="stylesheet" href="animate.css"> -->
+    <link rel="stylesheet" href="animate.css">
   </head>
   <body>
     <script>
